# RhexSLAM

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/giga_hw_interface/share/giga_hw_interface/: giga.launch.py  giga_hardware_plugins.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/leg_odometry/lib/leg_odometry/: leg_odometry_node
install/leg_odometry/share/leg_odometry/: package.bash  package.dsv  package.sh  package.xml  package.zsh
install/mlx90640_thermal/lib/mlx90640_thermal/: inference_node  publisher_node  thermal_marker_node
log/: latest_build
src/leg_odometry/: package.xml  setup.py
src/leg_odometry/leg_odometry/: encoder_reader_node.py  leg_odometry_node.py
src/mlx90640_thermal/: package.xml  setup.cfg  setup.py
src/mlx90640_thermal/launch/: thermal_detection.launch.py
src/mlx90640_thermal/mlx90640_thermal/: inference_node.py  publisher_node.py  thermal_image_view.py  thermal_marker_node.py
src/my_bot/: CMakeLists.txt
src/my_bot/config/: ekf.yaml  madgwick_params.yaml  my_slam_params.yaml  nav2_params.yaml  view_bot.rviz
src/my_bot/launch/: custom_navigation_launch.py  slam.launch.py  test.py  test2.py
src/rhex_launch/: package.xml  setup.py
src/rhex_launch/launch/: locomotion.launch.py  slam.launch.py
src/rhex_ws/giga_hw_interface/: CMakeLists.txt  package.xml
src/rhex_ws/rhex_control/: CMakeLists.txt  package.xml
src/rhex_ws/rhex_gazebo/: CMakeLists.txt
src/ros2_mpu6050/config/: params.yaml
(+113 files in other folders)
