<?xml version="1.0"?>
<package format="3">
  <name>rhex_launch</name>
  <version>0.1.0</version>
  <description>Launch files for RHex robot including locomotion and SLAM</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>giga_hw_interface</exec_depend>
  <exec_depend>rhex_control</exec_depend>
  <exec_depend>my_bot</exec_depend>

  <!-- Export information -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
